<resources>
    <string name="app_name">Takngo</string>
    <string name="home_message">Connection</string>
    <string name="validate">Log in</string>
    <string name="hint_email">Pseudo</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="first_connection">First connection ?</string>
    <string name="register">Register</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="fields">Empty field !</string>
    <string name="wrong_ident">Wrong email or password</string>
    <string name="price">Price</string>
    <string name="search_picture">Search picture</string>
    <string name="real_validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="create_product">Create product</string>
    <string name="modify_product">Modify product</string>
    <string name="roads_available">Roads available</string>
    <string name="menu_title">Manage menu</string>
    <string name="history">My history</string>
    <string name="services">My services</string>
    <string name="roads_menu">Roads menu</string>

    <string name="user_prob">Account problem : call admin</string>
    <string name="wrong_account">You don\'t have permission</string>

    <string name="profile_title">My profile</string>
    <string name="name">Name</string>
    <string name="lname">Last name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="pcode">Postal code</string>

    <string name="channel_name">Road request</string>
    <string name="channel_description">Display user\'s request for a road</string>

    <string name="notification_title">New passenger !</string>
    <string name="notification_content">Click to see roads available</string>

    <string name="no_course">No road available</string>
    <string name="reservation_msg">Reserved</string>

    <string name="no_service">No service.</string>
    <string name="remove">remove</string>

    <string name="mail_content">Send us a short resume about you, followed with your CV plus motivation letter.</string>

</resources>
