<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#212121"
    >

    <TextView
        android:id="@+id/response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_message"
        android:textSize="30sp"
        android:background="@color/main_background"
        android:textColor="@color/h1_text"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:src="@drawable/logo"

        android:layout_marginBottom="50dp"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/pseudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_email"
            android:textColor="@color/h1_text"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button"
            android:textColor="@color/h1_text"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="10dp"
            android:background="@drawable/register_button"
            android:textColor="@color/h1_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textColor="@color/link"/>

    </LinearLayout>



</LinearLayout>