<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Product.EditProductActivity"
    android:orientation="vertical"
    android:background="@color/main_background">
    <TextView
        android:id="@+id/tv_viewProduct_name"
        android:text="@string/modify_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:textSize="30sp"
        android:fontFamily="@font/custom_font"
        android:textColor="@color/titles"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/hint_text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_modifProduct_name"
                android:textColor="@color/hint_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textColor="@color/hint_text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_modifProduct_description"
                android:textColor="@color/hint_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/hint_text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/et_modifProduct_price"
                android:textColor="@color/hint_text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Image"
                android:textColor="@color/hint_text"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_picture"
                android:id="@+id/b_modifProduct_pict"/>
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/profilepicture"
                android:id="@+id/iv_modifProduct_image"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_editProduct_validate"
                    android:layout_weight="1"
                    android:text="@string/real_validate"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/b_editProduct_cancel"
                    android:text="@string/cancel"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>